--- a/styles/globals.css
+++ b/styles/globals.css
@@ -147,13 +147,13 @@ p.nav > a {
 
 @media (prefers-color-scheme: dark) {
   :root {
-      --background-color:#18191c;
-      --block-color: #282a2f;
-      --menu-color:#282a2f;
-      --menu-border-color:#282a2f;
+      --background-color:#151719;
+      --block-color: #272b2f;
+      --menu-color:#272b2f;
+      --menu-border-color:#272b2f;
       --menu-font-color:hsl(241, 100%, 74%);
-      --input_back:#282a2f;
-      --nav_block:hsl(220, 9%, 8%);
+      --input_back:#272b2f;
+      --nav_block:#101113;
       --nav_block_blur:hsla(240, 3%, 9%,0.7);
       --font-color:hsl(0, 0%, 100%);
       --brand-color:hsl(241, 100%, 74%);
