--- a/styles/index_main.module.css
+++ b/styles/index_main.module.css
@@ -1,12 +1,13 @@
 @media screen and (min-width:1900px) {
     div.main__menu_nav {
+        display: flex;
+        justify-content: center;
         background-color: var(--nav_block);
         margin:0 11px;
         height: 158px;
-        width:calc(100%-22px);
+        width:1880px;
         border-radius: 10px;
-        overflow-x: auto;
-        overflow-y: hidden;
+        margin: 0 auto;
     }
     div.main__menu_nav_blocks {
         display: flex;
@@ -28,13 +29,13 @@
 
 @media screen and (min-width:1161px) and (max-width:1899px) {
     div.main__menu_nav {
+        display: flex;
+        justify-content: center;
         background-color: var(--nav_block);
         margin:0 11px;
         height: 158px;
         width:calc(100%-22px);
         border-radius: 10px;
-        overflow-x: auto;
-        overflow-y: hidden;
     }
     div.main__menu_nav_blocks {
         display: flex;
@@ -109,7 +110,6 @@
 }
 span.nav_header {
     margin-top:14px;
-    font-weight: bold;
     font-size: 13px;
     text-align: center;
 }
