--- a/styles/index_main.module.css
+++ b/styles/index_main.module.css
@@ -95,7 +95,7 @@
         margin:0 8px;
     }
     div.main__menu_nav_block {
-        background-color: var(--nav_block);
+        background-color: var(--block-color);
         width:100px;
         height:100px;
         border-radius: 10px;
