--- a/styles/index_main.module.css
+++ b/styles/index_main.module.css
@@ -6,7 +6,7 @@
         margin:0 11px;
         height: 158px;
         width:1880px;
-        border-radius: 10px;
+        border-radius: 14px;
         margin: 0 auto;
     }
     div.main__menu_nav_blocks {
@@ -17,13 +17,18 @@
         background-color: var(--background-color);
         width:122px;
         height:114px;
-        border-radius: 10px;
+        border-radius: 14px;
         margin: 0 11px;
         cursor: pointer;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+    span.nav_header {
+        margin-top:14px;
+        font-size: 14px;
+        text-align: center;
     }
 }
 
@@ -35,7 +40,7 @@
         margin:0 11px;
         height: 158px;
         width:calc(100%-22px);
-        border-radius: 10px;
+        border-radius: 14px;
     }
     div.main__menu_nav_blocks {
         display: flex;
@@ -45,13 +50,18 @@
         background-color: var(--background-color);
         width:122px;
         height:114px;
-        border-radius: 10px;
+        border-radius: 14px;
         margin: 0 11px;
         cursor: pointer;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+    span.nav_header {
+        margin-top:14px;
+        font-size: 14px;
+        text-align: center;
     }
 }
 
@@ -61,7 +71,7 @@
         margin:0 11px;
         height:158px;
         width:calc(100%-22px);
-        border-radius: 10px;
+        border-radius: 14px;
         overflow-x: auto;
         overflow-y: hidden;
     }
@@ -73,7 +83,7 @@
         background-color: var(--background-color);
         width:122px;
         height:114px;
-        border-radius: 10px;
+        border-radius: 14px;
         margin: 0 11px;
         cursor: pointer;
         display: flex;
@@ -81,12 +91,17 @@
         align-items: center;
         justify-content: center;
     }
+    span.nav_header {
+        margin-top:14px;
+        font-size: 14px;
+        text-align: center;
+    }
 }
 @media (min-width:1px) and (max-width:600px) {
     div.main__menu_nav {
         background-color: transparent;
-        width:calc(100%-22px);
-        border-radius: 10px;
+        width:100%;
+        border-radius: 14px;
         overflow-x: auto;
         overflow-y: hidden;
     }
@@ -96,9 +111,9 @@
     }
     div.main__menu_nav_block {
         background-color: var(--nav_block);
-        width:100px;
-        height:100px;
-        border-radius: 10px;
+        width:90px;
+        height:90px;
+        border-radius: 14px;
         margin: 0 8px;
         cursor: pointer;
         display: flex;
@@ -106,9 +121,9 @@
         align-items: center;
         justify-content: center;
     }
-}
-span.nav_header {
-    margin-top:14px;
-    font-size: 14px;
-    text-align: center;
+    span.nav_header {
+        margin-top:8px;
+        font-size: 12px;
+        text-align: center;
+    }
 }
