dark theme changed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -213,13 +213,13 @@ p.nav > a {
 
 @media (prefers-color-scheme: dark) {
   :root {
-      --background-color:hsl(240, 3%, 11%);
-      --block-color: hsl(240, 2%, 18%);
-      --menu-color:hsl(240, 2%, 18%);
-      --menu-border-color:hsl(240, 2%, 18%);
+      --background-color:#151719;
+      --block-color: #101113;
+      --menu-color:#101113;
+      --menu-border-color:#101113;
       --menu-font-color:hsl(241, 100%, 74%);
-      --input_back:hsl(240, 2%, 18%);
-      --nav_block:hsl(240, 3%, 9%);
+      --input_back:#101113;
+      --nav_block:#101113;
       --nav_block_blur:hsla(240, 3%, 9%,0.7);
       --font-color:hsl(0, 0%, 100%);
       --brand-color:#7d7aff;
@@ -228,11 +228,11 @@ p.nav > a {
       --purple_back:hsl(280, 85%, 65%);
       --blue_back:hsl(210, 100%, 52%);
       --red_back:hsl(349, 100%, 59%);
-      --input_back_text:hsla(240, 33%, 94%,.6);
+      --input_back_text:#727479;
       --input_border:transparent;
       --border-color:hsl(240, 1%, 30%);
       --search_icon: url(../public/img/search_night.svg);
-      --nav_menu_c:#242426;
+      --nav_menu_c:#151719;
   }
 }
 @media (prefers-color-scheme: light) {
