--- a/styles/index_main.module.css
+++ b/styles/index_main.module.css
@@ -36,7 +36,7 @@
     div.main__menu_nav {
         display: flex;
         justify-content: center;
-        background-color: #101113;
+        background-color: var(--nav_block);
         margin:0 11px;
         height: 158px;
         width:calc(100%-22px);
@@ -47,7 +47,7 @@
         margin:22px 11px 0 11px;
     }
     div.main__menu_nav_block {
-        background-color: #151719;
+        background-color: var(--nav_menu_c);
         width:122px;
         height:114px;
         border-radius: 14px;
@@ -62,7 +62,6 @@
         margin-top:14px;
         font-size: 14px;
         text-align: center;
-        /* color:#b9babc; */
     }
 }
 
@@ -111,7 +110,7 @@
         margin:0 8px;
     }
     div.main__menu_nav_block {
-        background-color: var(--nav_block);
+        background-color: var(--nav_menu_c);
         width:90px;
         height:90px;
         border-radius: 14px;
