--- a/styles/globals.css
+++ b/styles/globals.css
@@ -213,26 +213,26 @@ p.nav > a {
 
 @media (prefers-color-scheme: dark) {
   :root {
-      --background-color:#151719;
-      --block-color: #101113;
-      --menu-color:#101113;
-      --menu-border-color:#101113;
-      --menu-font-color:hsl(241, 100%, 74%);
-      --input_back:#101113;
-      --nav_block:#101113;
-      --nav_block_blur:hsla(240, 3%, 9%,0.7);
-      --font-color:hsl(0, 0%, 100%);
-      --brand-color:#7d7aff;
-      --sub_content:hsla(240, 33%, 94%, 0.6);
-      --green_back:hsl(129, 67%, 52%);
-      --purple_back:hsl(280, 85%, 65%);
-      --blue_back:hsl(210, 100%, 52%);
-      --red_back:hsl(349, 100%, 59%);
-      --input_back_text:#727479;
-      --input_border:transparent;
-      --border-color:hsl(240, 1%, 30%);
-      --search_icon: url(../public/img/search_night.svg);
-      --nav_menu_c:#151719;
+    --background-color:hsl(0, 0%, 0%);
+    --block-color: hsl(240, 3%, 11%);
+    --menu-color:hsl(240, 3%, 11%);
+    --menu-border-color:hsl(240, 3%, 11%);
+    --menu-font-color:hsl(241, 100%, 74%);
+    --input_back:hsl(240, 3%, 11%);
+    --nav_block:hsl(0, 0%, 3%);
+    --nav_block_blur:hsla(240, 3%, 9%,0.7);
+    --font-color:hsl(0, 0%, 100%);
+    --brand-color:#7d7aff;
+    --sub_content:hsla(240, 33%, 94%, 0.6);
+    --green_back:hsl(129, 67%, 52%);
+    --purple_back:hsl(280, 85%, 65%);
+    --blue_back:hsl(210, 100%, 52%);
+    --red_back:hsl(349, 100%, 59%);
+    --input_back_text:hsla(240, 33%, 94%,.6);
+    --input_border:transparent;
+    --border-color:hsl(240, 1%, 30%);
+    --search_icon: url(../public/img/search_night.svg);
+    --nav_menu_c:hsl(240, 3%, 11%);
   }
 }
 @media (prefers-color-scheme: light) {
