--- a/styles/globals.css
+++ b/styles/globals.css
@@ -213,40 +213,40 @@ p.nav > a {
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background-color:hsl(0, 0%, 0%);
-    --block-color: hsl(240, 3%, 11%);
-    --menu-color:hsl(240, 3%, 11%);
-    --menu-border-color:hsl(240, 3%, 11%);
-    --menu-font-color:hsl(241, 100%, 74%);
-    --input_back:hsl(240, 3%, 11%);
-    --nav_block:hsl(0, 0%, 3%);
-    --nav_block_blur:hsla(240, 3%, 9%,0.7);
-    --font-color:hsl(0, 0%, 100%);
-    --brand-color:#7d7aff;
-    --sub_content:hsla(240, 33%, 94%, 0.6);
-    --green_back:hsl(129, 67%, 52%);
-    --purple_back:hsl(280, 85%, 65%);
-    --blue_back:hsl(210, 100%, 52%);
-    --red_back:hsl(349, 100%, 59%);
-    --input_back_text:hsla(240, 33%, 94%,.6);
-    --input_border:transparent;
-    --border-color:hsl(240, 1%, 30%);
-    --search_icon: url(../public/img/search_night.svg);
-    --nav_menu_c:hsl(240, 3%, 11%);
+    --background-color:hsl(240, 3%, 11%);
+      --block-color: hsl(240, 2%, 18%);
+      --menu-color:hsl(240, 2%, 18%);
+      --menu-border-color:hsl(240, 2%, 18%);
+      --menu-font-color:hsl(241, 100%, 74%);
+      --input_back:hsl(240, 2%, 18%);
+      --nav_block:hsl(240, 3%, 9%);
+      --nav_block_blur:hsla(240, 3%, 9%,0.7);
+      --font-color:hsl(0, 0%, 100%);
+      --brand-color:hsl(241, 100%, 74%);
+      --sub_content:hsla(240, 33%, 94%, 0.6);
+      --green_back:hsl(129, 67%, 52%);
+      --purple_back:hsl(280, 85%, 65%);
+      --blue_back:hsl(210, 100%, 52%);
+      --red_back:hsl(349, 100%, 59%);
+      --input_back_text:hsla(240, 33%, 94%,.6);
+      --input_border:transparent;
+      --border-color:hsl(240, 1%, 30%);
+      --search_icon: url(../public/img/search_night.svg);
+      --nav_menu_c:hsl(240, 3%, 15%);
   }
 }
 @media (prefers-color-scheme: light) {
   :root {
       --background-color:hsl(0, 0%, 100%);
       --block-color:hsl(220, 13%, 95%);
-      --menu-color:#6b5bd2;
+      --menu-color:hsl(248, 57%, 59%);
       --menu-border-color:hsl(248, 57%, 59%);
       --menu-font-color:hsl(0, 0%, 100%);
       --input_back:hsl(0, 0%, 100%);
       --nav_block:hsl(0, 0%, 98%);
       --nav_block_blur:hsla(0, 0%, 98%,0.7);
       --font-color:hsl(0, 0%, 0%);
-      --brand-color:#4634bc;
+      --brand-color:hsl(248, 57%, 47%);
       --sub_content:hsl(213, 5%, 39%);
       --green_back: hsl(135, 59%, 49%);
       --purple_back:hsl(280, 68%, 60%);
