--- a/styles/index_main.module.css
+++ b/styles/index_main.module.css
@@ -4,19 +4,19 @@
         justify-content: center;
         background-color: var(--nav_block);
         margin:0 11px;
-        height: 158px;
+        padding: 22px 0;
         width:1880px;
         border-radius: 14px;
         margin: 0 auto;
     }
     div.main__menu_nav_blocks {
         display: flex;
-        margin:22px 11px 0 11px;
+        margin:0 11px;
     }
     div.main__menu_nav_block {
         background-color: var(--nav_menu_c);
-        width:122px;
-        height:114px;
+        width:110px;
+        height:100px;
         border-radius: 14px;
         margin: 0 11px;
         cursor: pointer;
@@ -38,18 +38,18 @@
         justify-content: center;
         background-color: var(--nav_block);
         margin:0 11px;
-        height: 158px;
+        padding: 22px 0;
         width:calc(100%-22px);
         border-radius: 14px;
     }
     div.main__menu_nav_blocks {
         display: flex;
-        margin:22px 11px 0 11px;
+        margin:0 11px;
     }
     div.main__menu_nav_block {
         background-color: var(--nav_menu_c);
-        width:122px;
-        height:114px;
+        width:110px;
+        height:100px;
         border-radius: 14px;
         margin: 0 11px;
         cursor: pointer;
@@ -69,7 +69,7 @@
     div.main__menu_nav {
         background-color: var(--nav_block);
         margin:0 11px;
-        height:158px;
+        padding: 22px 0;
         width:calc(100%-22px);
         border-radius: 14px;
         overflow-x: auto;
@@ -77,12 +77,12 @@
     }
     div.main__menu_nav_blocks {
         display: flex;
-        margin:22px 11px 0 11px;
+        margin:0 11px;
     }
     div.main__menu_nav_block {
         background-color: var(--nav_menu_c);
-        width:122px;
-        height:114px;
+        width:110px;
+        height:100px;
         border-radius: 14px;
         margin: 0 11px;
         cursor: pointer;
@@ -101,9 +101,11 @@
     div.main__menu_nav {
         background-color: transparent;
         width:100%;
-        height:110px;
+        border-radius: 14px;
+        padding:16px 0;
         overflow-x: auto;
         overflow-y: hidden;
+        background-color: var(--nav_block);
     }
     div.main__menu_nav_blocks {
         display: flex;
