--- a/styles/index_main.module.css
+++ b/styles/index_main.module.css
@@ -16,7 +16,7 @@
     div.main__menu_nav_block {
         background-color: var(--nav_menu_c);
         width:110px;
-        height:100px;
+        height:110px;
         border-radius: 14px;
         margin: 0 11px;
         cursor: pointer;
@@ -26,7 +26,7 @@
         justify-content: center;
     }
     span.nav_header {
-        margin-top:14px;
+        margin-top:8px;
         font-size: 14px;
         text-align: center;
     }
@@ -49,7 +49,7 @@
     div.main__menu_nav_block {
         background-color: var(--nav_menu_c);
         width:110px;
-        height:100px;
+        height:110px;
         border-radius: 14px;
         margin: 0 11px;
         cursor: pointer;
@@ -59,7 +59,7 @@
         justify-content: center;
     }
     span.nav_header {
-        margin-top:14px;
+        margin-top:8px;
         font-size: 14px;
         text-align: center;
     }
@@ -82,7 +82,7 @@
     div.main__menu_nav_block {
         background-color: var(--nav_menu_c);
         width:110px;
-        height:100px;
+        height:110px;
         border-radius: 14px;
         margin: 0 11px;
         cursor: pointer;
@@ -92,7 +92,7 @@
         justify-content: center;
     }
     span.nav_header {
-        margin-top:14px;
+        margin-top:8px;
         font-size: 14px;
         text-align: center;
     }
@@ -112,8 +112,8 @@
     }
     div.main__menu_nav_block {
         background-color: var(--nav_menu_c);
-        width:90px;
-        height:90px;
+        width:100px;
+        height:100px;
         border-radius: 14px;
         margin: 0 8px;
         cursor: pointer;
@@ -127,4 +127,12 @@
         font-size: 12px;
         text-align: center;
     }
+}
+div.main__menu_nav_block_image {
+    width:40px;
+    height:40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 14px;
 }
