--- a/styles/index_main.module.css
+++ b/styles/index_main.module.css
@@ -6,7 +6,7 @@
         margin:0 11px;
         padding: 22px 0;
         width:1880px;
-        border-radius: 14px;
+        border-radius: 13px;
         margin: 0 auto;
     }
     div.main__menu_nav_blocks {
@@ -17,7 +17,7 @@
         background-color: var(--nav_menu_c);
         width:110px;
         height:110px;
-        border-radius: 14px;
+        border-radius: 13px;
         margin: 0 11px;
         cursor: pointer;
         display: flex;
@@ -40,7 +40,8 @@
         margin:0 11px;
         padding: 22px 0;
         width:calc(100%-22px);
-        border-radius: 14px;
+        border-radius: 13px;
+        backdrop-filter: blur(80px);
     }
     div.main__menu_nav_blocks {
         display: flex;
@@ -50,7 +51,7 @@
         background-color: var(--nav_menu_c);
         width:110px;
         height:110px;
-        border-radius: 14px;
+        border-radius: 13px;
         margin: 0 11px;
         cursor: pointer;
         display: flex;
@@ -71,7 +72,7 @@
         margin:0 11px;
         padding: 22px 0;
         width:calc(100%-22px);
-        border-radius: 14px;
+        border-radius: 13px;
         overflow-x: auto;
         overflow-y: hidden;
     }
@@ -83,7 +84,7 @@
         background-color: var(--nav_menu_c);
         width:110px;
         height:110px;
-        border-radius: 14px;
+        border-radius: 13px;
         margin: 0 11px;
         cursor: pointer;
         display: flex;
@@ -114,7 +115,7 @@
         background-color: var(--nav_menu_c);
         width:95px;
         height:95px;
-        border-radius: 14px;
+        border-radius: 13px;
         margin: 0 8px;
         cursor: pointer;
         display: flex;
@@ -134,5 +135,5 @@ div.main__menu_nav_block_image {
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 14px;
+    border-radius: 13px;
 }
