--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,11 +17,11 @@ h3 {
 }
 h4 {
   font-size:16px;
-  line-height:25px;
+  line-height:26px;
 }
 p {
   font-size:16px;
-  line-height:25px;
+  line-height:26px;
 }
 .click {
   cursor: pointer;
@@ -202,7 +202,7 @@ p.sub_content {
 
 p.nav {
   font-size:16px;
-  line-height:25px;
+  line-height:26px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -406,6 +406,7 @@ p.nav > a {
       --m-1: 30px 16px;
       --m-2: 54px 16px;
       --n-1: 16px 16px;
+      --n-2: 0 8px;
       --m-p: 0 32px;
       --p:48px;
       --n-b: transparent;
@@ -505,7 +506,7 @@ html {
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size:16px;
-  line-height:25px;
+  line-height:26px;
   background-color: var(--background-color);
   color:var(--font-color);
   font-display: optional;
@@ -513,7 +514,7 @@ body {
 input,button,input:focus,textarea,textarea:focus,select {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size:16px;
-  line-height:25px;
+  line-height:26px;
   background-color: transparent;
   border:0 none;
   outline:none;
@@ -620,6 +621,7 @@ div.header__search_menu {
 }
 span.header__search_menu_text {
   font-size:16px;
+  line-height:26px;
   font-weight: 600;
   color: var(--menu-font-color);
   margin: 0 16px 0 16px;
@@ -717,7 +719,7 @@ h1.page_not_found {
 p.page_not_found {
   margin-top:20px;
   font-size: 16px;
-  line-height: 25px;
+  line-height: 26px;
   text-align: center;
   color:var(--sub_content);
 }
