--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,11 @@ p {
   font-size:16px;
   line-height:26px;
 }
+p.sm {
+  margin-top:8px;
+  font-size: 13px;
+  line-height: 18px;
+}
 .click {
   cursor: pointer;
 }
@@ -234,6 +239,7 @@ p.nav > a {
       --border-color:hsl(240, 1%, 30%);
       --search_icon: url(../public/img/search_night.svg);
       --nav_menu_c:hsl(240, 3%, 15%);
+      --back_contrast:contrast(90%);
   }
 }
 @media (prefers-color-scheme: light) {
@@ -259,6 +265,7 @@ p.nav > a {
       --border-color:hsl(216, 10%, 90%);
       --search_icon: url(../public/img/search.svg);
       --nav_menu_c:hsl(0, 0%, 100%);
+      --back_contrast:contrast(30%);
   }
 }
 
@@ -734,6 +741,56 @@ a.page_not_found{
   color: white;
   cursor: pointer;
   margin:20px auto 0 auto;
+}
+div.confirm__back {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width:100%;
+  height:100vh;
+  -webkit-backdrop-filter: blur(10px) var(--back_contrast);
+  -moz-backdrop-filter: blur(10px) var(--back_contrast);
+  -o-backdrop-filter: blur(10px) var(--back_contrast);
+  -ms-backdrop-filter: blur(10px) var(--back_contrast);
+  backdrop-filter: blur(10px) var(--back_contrast);
+  background-color: var(--nav_block_blur);
+  z-index:2;
+}
+div.confirm__block {
+  width:244px;
+  height: auto;
+  background-color: var(--block-color);
+  border-radius: 14px;
+  padding:13px;
+  text-align: center;
+}
+div.confirm__block_action {
+  display: grid;
+}
+div.confirm__block_action_2 {
+  margin-top:16px;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  height: 50px;
+}
+div.confirm__block_action_2 > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+button.confirm_custom {
+  width: 100px;
+  height:40px;
+  border-radius: 26px;
+  cursor: pointer;
+}
+button.confirm_custom_a {
+  width: 100px;
+  height:40px;
+  border-radius: 26px;
+  cursor: pointer;
+  color:white;
 }
 /*  */
 #frame { transform: scale(0.75); }
