--- a/styles/globals.css
+++ b/styles/globals.css
@@ -239,7 +239,7 @@ p.nav > a {
       --border-color:hsl(240, 1%, 30%);
       --search_icon: url(../public/img/search_night.svg);
       --nav_menu_c:hsl(240, 3%, 15%);
-      --back_contrast:contrast(90%);
+      --back_contrast:brightness(100%);
   }
 }
 @media (prefers-color-scheme: light) {
@@ -265,7 +265,7 @@ p.nav > a {
       --border-color:hsl(216, 10%, 90%);
       --search_icon: url(../public/img/search.svg);
       --nav_menu_c:hsl(0, 0%, 100%);
-      --back_contrast:contrast(30%);
+      --back_contrast:brightness(50%);
   }
 }
 
@@ -749,11 +749,11 @@ div.confirm__back {
   justify-content: center;
   width:100%;
   height:100vh;
-  -webkit-backdrop-filter: blur(10px) var(--back_contrast);
+  /* -webkit-backdrop-filter: blur(10px) var(--back_contrast);
   -moz-backdrop-filter: blur(10px) var(--back_contrast);
   -o-backdrop-filter: blur(10px) var(--back_contrast);
-  -ms-backdrop-filter: blur(10px) var(--back_contrast);
-  backdrop-filter: blur(10px) var(--back_contrast);
+  -ms-backdrop-filter: blur(10px) var(--back_contrast); */
+  backdrop-filter: blur(4px) var(--back_contrast);
   background-color: var(--nav_block_blur);
   z-index:2;
 }
