--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,7 +24,7 @@ p {
   line-height:26px;
 }
 p.sm {
-  margin-top:8px;
+  margin-top:16px;
   font-size: 13px;
   line-height: 18px;
 }
@@ -240,6 +240,7 @@ p.nav > a {
       --search_icon: url(../public/img/search_night.svg);
       --nav_menu_c:hsl(240, 3%, 15%);
       --back_contrast:brightness(100%);
+      --confirm_block:hsl(240, 2%, 18%);
   }
 }
 @media (prefers-color-scheme: light) {
@@ -265,7 +266,8 @@ p.nav > a {
       --border-color:hsl(216, 10%, 90%);
       --search_icon: url(../public/img/search.svg);
       --nav_menu_c:hsl(0, 0%, 100%);
-      --back_contrast:brightness(50%);
+      --back_contrast:brightness(40%);
+      --confirm_block:hsl(0, 0%, 100%);
   }
 }
 
@@ -749,20 +751,20 @@ div.confirm__back {
   justify-content: center;
   width:100%;
   height:100vh;
-  /* -webkit-backdrop-filter: blur(10px) var(--back_contrast);
-  -moz-backdrop-filter: blur(10px) var(--back_contrast);
-  -o-backdrop-filter: blur(10px) var(--back_contrast);
-  -ms-backdrop-filter: blur(10px) var(--back_contrast); */
-  backdrop-filter: blur(4px) var(--back_contrast);
+  -webkit-backdrop-filter: blur(2px) var(--back_contrast);
+  -moz-backdrop-filter: blur(2px) var(--back_contrast);
+  -o-backdrop-filter: blur(2px) var(--back_contrast);
+  -ms-backdrop-filter: blur(2px) var(--back_contrast);
+  backdrop-filter: blur(2px) var(--back_contrast);
   background-color: var(--nav_block_blur);
   z-index:2;
 }
 div.confirm__block {
   width:244px;
   height: auto;
-  background-color: var(--block-color);
-  border-radius: 14px;
-  padding:13px;
+  background-color: var(--confirm_block);
+  border-radius: 13px;
+  padding:20px;
   text-align: center;
 }
 div.confirm__block_action {
@@ -781,13 +783,13 @@ div.confirm__block_action_2 > div {
 }
 button.confirm_custom {
   width: 100px;
-  height:40px;
+  padding:8px 0;
   border-radius: 26px;
   cursor: pointer;
 }
 button.confirm_custom_a {
   width: 100px;
-  height:40px;
+  padding:8px 0;
   border-radius: 26px;
   cursor: pointer;
   color:white;
