--- a/styles/globals.css
+++ b/styles/globals.css
@@ -807,6 +807,8 @@ button.confirm_custom_a {
   height: 442px;
   border:0;display:block; 
   margin:0 auto;
+  background-color: var(--nav_block);
+  border-radius: 13px;
 }
 
 
