--- a/styles/acc.css
+++ b/styles/acc.css
@@ -488,6 +488,9 @@ div.main__block_fixed_confirm {
     bottom:0;
     border-radius: 20px 20px 0 0;
     -webkit-backdrop-filter: blur(10px);
+    -moz-backdrop-filter: blur(10px);
+    -o-backdrop-filter: blur(10px);
+    -ms-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     animation-name: basic_animation;
     animation-duration: 0.4s;
