--- a/styles/globals.css
+++ b/styles/globals.css
@@ -858,5 +858,12 @@ div.fullscreen__result_button {
   transform: scale(0.95);
   background-color: var(--nav_block);
 }
+div.main__crop_image {
+  width:100vw;
+  height: 100vh;
+  background-color: var(--block-color);
+  position: fixed;
+  z-index:30;
+}
 
 
