--- a/styles/globals.css
+++ b/styles/globals.css
@@ -782,8 +782,8 @@ div.confirm__block_action {
   display: grid;
 }
 div.confirm__block_action > div {
-  margin-top:12px;
-  padding: 4px 0;
+  margin-top:16px;
+  padding-bottom:8px;
   cursor: pointer;
   display: flex;
   align-items: center;
