language select and bug fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -686,10 +686,9 @@ img.header__action_avatar {
   border-radius: 13px;
   object-fit: cover;
 }
-select.header__action_block {
+div.header__action_block {
   width:85px;
   height:46px;
-  background: url(/img/top.svg) no-repeat 75% 50% var(--block-color);
   margin-left:16px;
   border-radius: 13px;
   display: flex;
@@ -698,9 +697,10 @@ select.header__action_block {
   cursor: pointer;
   font-weight: 700;
   font-size:16px;
-  padding-left:24px;
+  background-color: var(--block-color);
 }
 span.header__action_block_text {
+  text-transform: uppercase;
   font-weight: 700;
 }
 
