--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,10 @@ h4 {
   font-size:16px;
   line-height:26px;
 }
+h5 {
+  font-size:15px;
+  line-height: 20px;
+}
 p {
   font-size:16px;
   line-height:26px;
@@ -26,6 +30,10 @@ p {
 p.small {
   font-size: 14px;
   line-height: 20px;
+}
+p.smaller {
+  font-size: 13px;
+  line-height: 18px;
 }
 p.sm {
   margin-top:16px;
@@ -480,7 +488,7 @@ p.nav > a {
   }
 }
 
-input.header__search_input:focus+div.header__search_menu {
+div.c>input.header__search_input:focus+div.header__search_menu {
   display: none;
 }
 
@@ -625,6 +633,16 @@ img.header__search_menu_img {
 div.header__search {
   margin: 0 auto;
   display: flex;
+}
+
+div.header__search_blocks {
+  position: absolute;
+  display: flex;
+  /* flex-direction: column; */
+  z-index:2;
+  margin-top:60px;
+  width:700px;
+  flex-wrap: wrap;
 }
 
 div.header__search_menu {
